--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -34,6 +34,7 @@ $require-color:rgb(133,
 $footer-color:rgb(147,
 206,
 157);
+$flower-shape:yellow;
 //font h1
 $font-h1: 'Fondamento'; // I put h2 for main font looked better
 $font-h2:'El Messiri',
