--- a/style.css
+++ b/style.css
@@ -2,27 +2,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=El+Messiri&family=Sawarabi+Mincho&display=swap");
 @media only screen and (max-width: 35rem) {
-  
-  h1 {
-    font-size: 1.7rem;
-    font-family: "El Messiri", sans-serif;
-    font-weight: 800;
-  }
-
   h1::before {
     display: inline-block;
     position: relative;
     content: "";
-    width: 80px;
-    height: 80px;
-    background: url("image/plants logo.png");
+    width: 100px;
+    height: 100px;
+    background: url("image/favicon_1.png");
     background-repeat: no-repeat;
     background-size: 100%;
   }
 
   h2::before {
     content: " ";
-    padding: 40px 20px 10px 60px;
+    padding: 50px;
   }
 
   body {
@@ -30,99 +23,14 @@
     flex-direction: column;
     background-color: white;
     background-image: url("../zengardens/image/zen_background_small.jpg");
-
   }
 
   header {
     background-size: cover;
-    padding: 1.5em;
-    margin: 8px 0;
+    padding: 1.8em;
+    margin: 10px 0;
     border: 1px solid lightgrey;
-    background-color: #9adaad;
-    border-radius: 15px 50px 30px;
   }
-
-
-
-
-
-
-
-
-  section.intro .summary {
-    text-align: center;
-    grid-row: 2;
-    grid-column: 1/span 2;
-    border: 1px solid powderblue;
-    margin-bottom: 20px;
-    
-    border-radius: 10px;
-  }
-  section.intro .preamble {
-    background-color: #bae7e7;
-    text-align: center;
-    grid-row: 2;
-    padding: 10px;
-    border-radius: 10px;
-  }
-
-  div.main,
-zen-supporting {
-    padding: 15px;
-    margin-bottom: 35px;
-    border-radius: 10px;
-    background: url(image/zen_background_small.jpg) repeat;
-    background-size: auto 850px;
-  }
-  div.main .explanation,
-zen-supporting .explanation {
-    grid-row: 1;
-    background-color: #eca7a7;
-    padding: 10px;
-    margin-bottom: 35px;
-    border-radius: 10px;
-  }
-  div.main .participation,
-zen-supporting .participation {
-    grid-row: 2;
-    margin-bottom: 35px;
-    background-color: #f0dbc0;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  div.main .benefits,
-zen-supporting .benefits {
-    margin-bottom: 35px;
-    background-color: #63f0f0;
-    padding: 10px;
-    border-radius: 10px;
-  }
-  div.main .requirements,
-zen-supporting .requirements {
-    margin-bottom: 35px;
-    background-color: #85cbeb;
-    padding: 10px;
-    border-radius: 10px;
-  }
-
-  aside.sidebar {
-    padding: 40px;
-    grid-column: 1/2;
-    grid-row: 1/3;
-  }
-
-
-
-
-
-.wrapper {
-  background-color: #66ad72;
-  border-radius: 15px 50px 30px;
-  font-size: 16px;
-  text-align: left;
-}
-
-
 
   section.intro {
     line-height: 1.2em;
@@ -134,7 +42,6 @@ zen-supporting .requirements {
 
   .intro div,
 footer {
-    background-color: #c3fac8;
     border: 1px solid lightgrey;
     margin: 10px 0;
     padding: 10px;
@@ -159,6 +66,8 @@ footer {
     background-color: #a1f3af;
     height: 20px;
   }
+
+  /* Display Icons and hide text */
   .zen-github::before {
     background: url("image/github.png");
   }
@@ -184,19 +93,24 @@ footer {
 .zen-license::before,
 .zen-validate-css::before,
 .zen-validate-html::before {
+    margin-left: 10px;
+    margin-right: 10px;
     display: inline-block;
     position: relative;
-    width: 5px;
-    height: 5px;
+    content: "";
+    width: 25px;
+    height: 25px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-left: 10px;
-    margin-right: 8px;
-    content: " ";
-    padding: 12px;
   }
 
-
+  .zen-github,
+.zen-accessibility,
+.zen-license,
+.zen-validate-css,
+.zen-validate-html {
+    font-size: 0;
+  }
 }
 @media only screen and (min-width: 35rem) {
   body {
@@ -387,6 +301,51 @@ zen-supporting .requirements {
   }
   .wrapper a:hover {
     color: #85cbeb;
+  }
+
+  /* Display Icons and hide text */
+  .zen-github::before {
+    background: url("image/github.png");
+  }
+
+  .zen-accessibility::before {
+    background: url("image/accessibility.png");
+  }
+
+  .zen-license::before {
+    background: url("image/license.png");
+  }
+
+  .zen-validate-css::before {
+    background: url("image/css.png");
+  }
+
+  .zen-validate-html::before {
+    background: url("image/html.png");
+  }
+
+  .zen-github::before,
+.zen-accessibility::before,
+.zen-license::before,
+.zen-validate-css::before,
+.zen-validate-html::before {
+    margin-left: 10px;
+    margin-right: 10px;
+    display: inline-block;
+    position: relative;
+    content: "";
+    width: 35px;
+    height: 35px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
+  .zen-github,
+.zen-accessibility,
+.zen-license,
+.zen-validate-css,
+.zen-validate-html {
+    font-size: 0;
   }
 }
 @media only screen and (min-width: 70rem) {
@@ -579,40 +538,40 @@ zen-supporting .requirements {
     height: 40px;
     background: #eca7a7;
     border-radius: 50px;
-    animation-name: l-circle;
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+    animation-name: l-circle;
   }
 
   .summary p abbr:after {
     position: absolute;
     content: "";
-    top: 0;
+    top: 0px;
     left: 50px;
     width: 40px;
     height: 40px;
     background: #eca7a7;
     border-radius: 50px;
-    animation-name: l-circle;
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+    animation-name: l-circle;
   }
 
   .summary p:before {
     position: absolute;
     content: "";
-    top: 0;
+    top: 0px;
     left: 90px;
     width: 40px;
     height: 40px;
     background: #eca7a7;
     border-radius: 50px;
-    animation-name: r-circle;
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+    animation-name: r-circle;
   }
 
   .summary:before {
@@ -624,10 +583,10 @@ zen-supporting .requirements {
     height: 40px;
     background: #eca7a7;
     border-radius: 50px;
-    animation-name: r-circle;
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+    animation-name: r-circle;
   }
 
   .summary:after {
@@ -639,10 +598,10 @@ zen-supporting .requirements {
     height: 40px;
     background: yellow;
     border-radius: 50px;
-    animation-name: c-circle;
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+    animation-name: c-circle;
   }
 
   @keyframes c-circle {
@@ -670,8 +629,7 @@ zen-supporting .requirements {
       left: 150px;
     }
   }
-  /* Display Icons */
-  
+  /* Display Icons and hide text */
   .zen-github::before {
     background: url("image/github.png");
   }
@@ -697,16 +655,24 @@ zen-supporting .requirements {
 .zen-license::before,
 .zen-validate-css::before,
 .zen-validate-html::before {
+    margin-left: 40px;
+    margin-right: 10px;
     display: inline-block;
     position: relative;
-    width: 10px;
-    height: 10px;
+    content: "";
+    width: 35px;
+    height: 35px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-left: 35px;
-    margin-right: 10px;
-    content: " ";
-    padding: 12px;
+  }
+
+  .zen-github,
+.zen-accessibility,
+.zen-license,
+.zen-validate-css,
+.zen-validate-html {
+    font-size: 30px;
+    text-decoration: none;
   }
 }
 
